--- a/package.json
+++ b/package.json
@@ -1,38 +1,62 @@
 {
-  "name": "agile-tasks-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "agile-tasks-frontend",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.11.10",
+        "@testing-library/react": "^11.2.6",
+        "@testing-library/user-event": "^12.8.3",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-loading-skeleton": "^2.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.3",
+        "web-vitals": "^1.1.1"
+    },
+    "scripts": {
+        "start": "run-p watch:css react-scripts:start",
+        "build": "run-s build:css react-scripts build",
+        "build:css": "postcss src/styles/tailwind.css -o src/styles/app.css",
+        "watch:css": "postcss src/styles/tailwind.css -o src/styles/app.css --watch",
+        "react-scripts:start": "timeout /t 5 /nobreak > NUL && react-scripts start",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "format": "prettier --write \"src/**/*{.ts,.js,.json,.css,.scss}\"",
+        "lint": "eslint \"src/**/*{.ts,.js,.json,.css,.scss}\" --fix"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.2.5",
+        "eslint": "^7.24.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-prettier": "^8.2.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.23.2",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "npm-run-all": "^4.1.5",
+        "postcss": "^8.2.12",
+        "postcss-cli": "^8.3.1",
+        "prettier": "^2.2.1",
+        "prop-types": "^15.7.2",
+        "tailwindcss": "^2.1.1"
+    }
 }
