--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
         "no-console": 0,
         "import/prefer-default-export": 0,
         "import": 0,
+        "import/no-cycle": 0,
         "func-names": 0,
         "space-before-function-paren": 0,
         "comma-dangle": 0,
