--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-loading-skeleton": "^2.2.0",
+        "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "rxjs": "^6.6.7",
