--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^12.8.3",
         "jwt-decode": "^3.1.2",
         "react": "^17.0.2",
+        "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^17.0.2",
         "react-loading-skeleton": "^2.2.0",
         "react-router": "^5.2.0",
