--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "rxjs": "^6.6.7",
+        "socket.io-client": "^2.3.1",
         "web-vitals": "^1.1.1"
     },
     "scripts": {
